plugins/kotlin/idea/tests/testData/checker/codeFragments/primaryConstructorLocal.kt.fragment.k2
local + a + <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'c'.">c</error> + <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'd'.">d</error> + <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'e'.">e</error>